tests/baselines/reference/collisionRestParameterUnderscoreIUsage.errors.txt
==== tests/cases/compiler/collisionRestParameterUnderscoreIUsage.ts (1 errors) ====
    declare var console: { log(msg?: string): void; };
    var _i = "This is what I'd expect to see";
    class Foo {
        constructor(...args: any[]) {
            console.log(_i); // This should result in error
                        ~~
!!! collisionRestParameterUnderscoreIUsage.ts(5,21): error TS2235: Expression resolves to variable declaration '_i' that compiler uses to initialize rest parameter.
        }
    }
    new Foo();